added background image to all components

--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -1,4 +1,5 @@
 .component-layout {
+    background-image: url(https://cdn.pixabay.com/photo/2016/10/18/21/22/california-1751455__340.jpg);
     border: 2px solid #4747FF;
     margin-bottom: 5px;
 }
