--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,5 @@
 .component-layout {
     border: 2px solid #54AA54;
     padding: 15px 10px;
+    background-image: url(https://cdn.pixabay.com/photo/2015/03/26/09/47/sky-690293_960_720.jpg)
 }
