--- a/src/app/arts/arts.component.css
+++ b/src/app/arts/arts.component.css
@@ -1,4 +1,5 @@
 .component-layout {
+    background-image: url(https://cdn.pixabay.com/photo/2015/03/26/09/47/sky-690293_960_720.jpg);
     border: 2px solid #2324;
     margin-bottom: 5px;
 }   
