--- a/src/app/time/time.component.css
+++ b/src/app/time/time.component.css
@@ -1,4 +1,6 @@
 .component-layout {
     border: 2px solid #7C7C7C;
+    background-image: url(https://cdn.pixabay.com/photo/2017/09/12/11/56/universe-2742113_960_720.jpg);
     margin-bottom: 5px;
 }
+https://cdn.pixabay.com/photo/2016/10/18/21/22/california-1751455__340.jpg
